tests/fail/stable/raw_string.stderr
error: more placeholders than types provided:
       At r"asdf{}asdf"
                ^^
 --> tests/fail/stable/raw_string.rs:2:26
  |
2 |     sscanf::scanf!("hi", r"asdf{}asdf");
  |                          ^^^^^^^^^^^^^

error: radix options 'x', 'o', 'b' cannot be followed by anything.
       Hint: If this was meant to be a regex option, surround it with '/':
       At r"asdf{:bob}asdf"
                   ^^
 --> tests/fail/stable/raw_string.rs:3:26
  |
3 |     sscanf::scanf!("hi", r"asdf{:bob}asdf", usize);
  |                          ^^^^^^^^^^^^^^^^^

error: radix options 'x', 'o', 'b' cannot be followed by anything.
       Hint: If this was meant to be a regex option, surround it with '/':
       At r"asdf{usize:bob}asdf"
                        ^^
 --> tests/fail/stable/raw_string.rs:4:26
  |
4 |     sscanf::scanf!("hi", r"asdf{usize:bob}asdf");
  |                          ^^^^^^^^^^^^^^^^^^^^^^

error: more placeholders than types provided:
       At r##"asdf{}asdf"##
                  ^^
 --> tests/fail/stable/raw_string.rs:5:26
  |
5 |     sscanf::scanf!("hi", r##"asdf{}asdf"##);
  |                          ^^^^^^^^^^^^^^^^^

error: radix options 'x', 'o', 'b' cannot be followed by anything.
       Hint: If this was meant to be a regex option, surround it with '/':
       At r##"asdf{:bob}asdf"##
                     ^^
 --> tests/fail/stable/raw_string.rs:6:26
  |
6 |     sscanf::scanf!("hi", r##"asdf{:bob}asdf"##, usize);
  |                          ^^^^^^^^^^^^^^^^^^^^^

error: radix options 'x', 'o', 'b' cannot be followed by anything.
       Hint: If this was meant to be a regex option, surround it with '/':
       At r##"asdf{usize:bob}asdf"##
                          ^^
 --> tests/fail/stable/raw_string.rs:7:26
  |
7 |     sscanf::scanf!("hi", r##"asdf{usize:bob}asdf"##);
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^
